<resources>
    <string name="app_name">My Programs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    fragment main-->
    <string name="textView_programName">Program Name</string>

    <!--    fragment main recycler view row-->
    <string name="textView_LessonName">Lesson Name</string>
    <string name="textView_lecturerName">Lecturer Name</string>
    <string name="textView_classRoom">Room 203</string>
    <string name="textView_absenteeism">Absenteeism: 0</string>


    <!--    fragment details-->
    <string name="textView_appBar_details">Details</string>
    <string name="editText_lessonTextHint">Lesson Name</string>
    <string name="editText_lecturerTextHint">Lecturer Name</string>
    <string name="editText_classRoomHint">Classroom</string>
    <string name="textView_addProgramText">Add Program</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>


    <!--    fragment add program-->
    <string name="textView_appBar_addProg">Add Program</string>

    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="editText_dropDown_dayText">Which Day</string>
    <string name="editText_dropDown_startTimeText">Start Time</string>
    <string name="editText_dropDown_finishTimeText">Finish Time</string>
    <string name="editText_dropDown_reminderText">Reminder</string>

    <string-array name="reminder">
        <item>No Reminder</item>
        <item>On Time</item>
        <item>5 Minutes ago</item>
        <item>10 Minutes ago</item>
        <item>15 Minutes ago</item>
        <item>30 Minutes ago</item>
        <item>1 Hour ago</item>
    </string-array>
    <string name="editText_dropDown_absenteeismText">Right of absence</string>
    <string name="textView_reminderInfoText">You will receive the notification when the lesson time is approaching.</string>
    <string name="description_goBack">Go to back</string>
    <string name="description_whichDay">Which day</string>
    <string name="editText_dropDown_typeOfLesson">Type of lesson</string>

    <string-array name="typeOfLesson">
        <item>Lesson</item>
        <item>Laboratory</item>
        <item>Practice</item>
        <item>Online</item>
    </string-array>
    <string name="main_textView_error">There is something wrong!</string>
    <string name="emptyText">There is no Program</string>
    <string name="addNewText">To add a program click +</string>
    <string name="textView_manageProgram">Manage Programs</string>
    <string name="textView_search">Search</string>
    <string name="dialogEditText_progName">Program Name</string>
    <string name="alertDialog_sureDelete">Are you sure you want to delete?</string>
    <string name="alertDialog_titleDelete">Delete</string>
    <string name="alertDialog_posButton">Yes</string>
    <string name="alertDialog_negButton">No</string>
    <string name="toast_successful">Successful</string>
    <string name="textView_appBar_editProg">Edit Program</string>
    <string name="TextView_appBar_addProg">Add Program</string>
    <string name="editText_progNameHint">Program Name</string>
    <string name="alertDialog_saveButton">Save</string>
    <string name="alertDialog_cancelButton">Cancel</string>
    <string name="textView_dateAdded">Creation Date</string>
    <string name="textView_dateEdited">Modified Date</string>


</resources>