<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.DetailsFragment">


    <LinearLayout
        android:id="@+id/fragmentDetails_linearLayout_appBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorSecondaryVariant"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/fragmentDetails_textView_LessonDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                android:text="@string/textView_appBar_details"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/fragmentMain_imageView_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_edit_24" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentDetails_editText_lessonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_lessonTextHint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_menu_book_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentDetails_editText_lecturerName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_lecturerTextHint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentDetails_editText_classroom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_classRoomHint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_home_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?attr/colorSecondaryVariant" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/fragmentDetails_textView_addProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@drawable/ic_baseline_add_24"
            android:text="@string/textView_addProgramText"
            android:textSize="18sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragmentDetails_recyclerView_programRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragmentDetails_linearLayout_Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/fragmentDetails_button_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            app:strokeColor="?attr/colorSecondaryVariant" />

        <Button
            android:id="@+id/fragmentDetails_button_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:text="@string/button_save"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>