<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ManageProgramFragment">


    <LinearLayout
        android:id="@+id/fragmentManageProg_linearLayout_appBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="10dp">

            <TextView
                android:id="@+id/fragmentManageProg_textView_ManagePrograms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="?attr/colorOnSecondary"
                android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                android:drawableTint="?attr/colorOnPrimary"
                android:text="@string/textView_manageProgram"
                android:textSize="25sp"
                android:textAlignment="textStart"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/fragmentManageProg_imageView_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:tint="?attr/colorOnSecondary"
                android:src="@drawable/ic_baseline_add_circle_outline_24" />

        </LinearLayout>

    </LinearLayout>


    <EditText
        android:id="@+id/fragmentManageProg_editText_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:hint="@string/textView_search"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentManageProg_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ProgressBar
        android:id="@+id/manageLoadingProgressBar"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:id="@+id/manage_errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_error_outline_24"
            app:tint="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_textView_error" />
    </LinearLayout>

    <TextView
        android:id="@+id/manage_emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyText"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>


</LinearLayout>