<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.AddProgramFragment">


    <LinearLayout
        android:id="@+id/fragmentAddProgram_linearLayout_appBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/fragmentAddProgram_textView_AddProgram"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                android:drawableTint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/textView_appBar_addProg"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/fragmentMain_imageView_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:tint="?attr/colorOnPrimary"
                android:src="@drawable/ic_baseline_edit_24" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentAddProg_editText_dayPicker"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_dropDown_dayText">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?attr/colorSecondaryVariant" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragmentAddProg_editText_startTimePicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/editText_dropDown_startTimeText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_startTimePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragmentAddProg_editText_finishTimePicker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/editText_dropDown_finishTimeText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_finishTimePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>






        </LinearLayout>



    </LinearLayout>


</LinearLayout>