<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:background="#34C3C3C3"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/recyclerRow_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Day"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fragmentMain_recycler_textView_startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12:00"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/fragmentMain_recycler_textView_finishTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="13:00"/>

        </LinearLayout>

        <View
            android:id="@+id/fragmentMain_recycler_view_divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/red"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragmentMain_recycler_textView_lessonName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:text="@string/textView_LessonName"/>
                <TextView
                    android:id="@+id/fragmentMain_recycler_textView_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="type of lesson"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragmentMain_recycler_textView_lecturerName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textView_lecturerName"/>
                <TextView
                    android:id="@+id/fragmentMain_recycler_textView_classRoom"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/textView_classRoom"/>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>





</LinearLayout>